--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,10 @@ coverage
 .lock-wscript
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
-build/Release
+build/
+
+# Distributions
+dist/
 
 # Dependency directories
 node_modules
