--- a/package.json
+++ b/package.json
@@ -22,8 +22,15 @@
     "debug": "^2.2.0",
     "express": "^4.14.0",
     "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-exec": "^2.1.3",
     "gulp-nodemon": "^2.1.0",
-    "path": "^0.12.7"
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^2.0.1",
+    "gulp-zip": "^4.0.0",
+    "path": "^0.12.7",
+    "pump": "^1.0.2"
   },
   "devDependencies": {
     "lodash": "^4.17.0",
